--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form action="" method="post">
                 <input class="input input-text" type="text" name="username" placeholder="Enter your username" required autofocus/>
                 <input class="input input-text" type="password" name="password" placeholder="Enter your password" required/>
-                <button class="input input-button" id="submit" type="submit">SIGN-IN</button>
+                <button class="input input-button" id="submit" type="submit">SIGN IN</button>
                 <p class="message"><a href='#'> Forgot password?</a></p>
                 <p class="message"><a href='signup.html'> Dont have an Account? </a></p>
             </form>
