--- a/pos.html
+++ b/pos.html
@@ -21,13 +21,35 @@
         <div class="left_side_bar">
             <ul class="links">
                 <li class="link"><a href="/pos.html"><i class="fas fa-shopping-cart"></i> Point of sale</a></li>
-                <li class="link"><a href="/#"><i class="fas fa-history"></i> SALES HISTORY</a></li>
-                <li class="link"><a href="/#"><i class="fas fa-tags"></i> PRODUCTS</a></li>
-                <li class="link"><a href="/#"><i class="fas fa-boxes"></i> INVENTORY</a></li>
+                <li class="link"><a href="/sales_history.html"><i class="fas fa-history"></i> SALES HISTORY</a></li>
+                <li class="link"><a href="/products.html"><i class="fas fa-tags"></i> PRODUCTS</a></li>
+                <li class="link"><a href="/inventory.html"><i class="fas fa-boxes"></i> INVENTORY</a></li>
             </ul>
         </div>
         <div class="main">
-           
+            <div class="grand">
+                <p>GRAND TOTAL: <span class="grand_total">0</span> </p>
+            </div>
+            <table class="table_root">
+                <thead class="table_head">
+                    <tr>
+                        <th class="colunm" >ID</th>
+                        <th class="colunm" >NAME</th>
+                        <th class="colunm" >COST</th>
+                        <th class="colunm" >AMOUNT</th>
+                        <th class="colunm" >TOTAL COST</th>
+                    </tr>
+                </thead>
+                <tbody class="table_body">
+                    <tr id="0" class="row">
+                        <td class="colunm id"><input class="cell" type="text" onChange="auto_row_adder()"></td>
+                        <td class="colunm name"><input class="cell" type="text" onChange="auto_row_adder()"></td>
+                        <td class="colunm cost"><input class="cell" type="text" onChange="auto_row_adder()"></td>
+                        <td class="colunm amount"><input class="cell" type="number" min="1" onChange="auto_row_adder()"></td>
+                        <td class="colunm total_cost"><input class="cell" type="text" readonly></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div class="right_side_bar"></div>
     </main>
