--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo.png" type="image/png">
     <script src="/script/index.js"></script>
     <title>Store Manager</title>
 </head>
 <body class="root">
     <header class="app-bar">
         <div>
-            <h1><i class="fas fa-store logo"></i></h1>
+            <h1 class="title"><i class="fas fa-store logo"></i></h1>
         </div>
     </header>
     <main class="body">
