--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="root">
     <header class="app-bar">
         <div>
-            <h1><i class="fas fa-store logo"></i></h1>
+            <h1 class="title"><i class="fas fa-store logo"></i></h1>
         </div>
     </header>
     <main class="body">
