[Bug #161194544 finishes] Fixed dead links

--- a/inventory_manager.html
+++ b/inventory_manager.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="shortcut icon" href="/logo.png" type="image/png">
-    <script src="/script/index.js"></script>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
+    <script src="script/index.js"></script>
     <title>Store Manager</title>
 </head>
 
@@ -22,13 +22,13 @@
     <main class="body">
         <div class="left_side_bar">
             <ul class="links">
-                <li class="link"><a href="/products.html"><i class="fas fa-tags"></i> PRODUCTS</a></li>
-                <li class="link"><a href="/inventory.html"><i class="fas fa-boxes"></i> INVENTORY</a></li>
-                <li class="link"><a href="/sales_history.html"><i class="fas fa-history"></i> SALES HISTORY</a></li>
-                <li class="link"><a href="/inventory_manager.html"><i class="fas fa-sitemap"></i> INVENTORY MANAGER</a></li>
-                <li class="link"><a href="/all_sales_history.html"><i class="fas fa-chart-line"></i> ALL SALES HISTORY</a></li>
-                <li class="link"><a href="/add_sale_attendant.html"><i class="fas fa-user-plus"></i>ADD SALE ATTENDANT</a></li>
-                <li class="link"><a href="/products_category.html"><i class="fas fa-sitemap"></i> PRODUCT CATEGORY</a></li>
+                <li class="link"><a href="products.html"><i class="fas fa-tags"></i> PRODUCTS</a></li>
+                <li class="link"><a href="inventory.html"><i class="fas fa-boxes"></i> INVENTORY</a></li>
+                <li class="link"><a href="sales_history.html"><i class="fas fa-history"></i> SALES HISTORY</a></li>
+                <li class="link"><a href="inventory_manager.html"><i class="fas fa-sitemap"></i> INVENTORY MANAGER</a></li>
+                <li class="link"><a href="all_sales_history.html"><i class="fas fa-chart-line"></i> ALL SALES HISTORY</a></li>
+                <li class="link"><a href="add_sale_attendant.html"><i class="fas fa-user-plus"></i>ADD SALE ATTENDANT</a></li>
+                <li class="link"><a href="products_category.html"><i class="fas fa-sitemap"></i> PRODUCT CATEGORY</a></li>
             </ul>
         </div>
         <div class="main">
