--- a/pos.html
+++ b/pos.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="shortcut icon" href="/logo.png" type="image/png">
-    <script src="/script/index.js"></script>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
+    <script src="script/index.js"></script>
     <title>Store Manager</title>
 </head>
 <body class="root">
@@ -19,10 +19,10 @@
     <main class="body">
         <div class="left_side_bar">
             <ul class="links">
-                <li class="link"><a href="/pos.html"><i class="fas fa-shopping-cart"></i> Point of sale</a></li>
-                <li class="link"><a href="/sales_history.html"><i class="fas fa-history"></i> SALES HISTORY</a></li>
-                <li class="link"><a href="/products.html"><i class="fas fa-tags"></i> PRODUCTS</a></li>
-                <li class="link"><a href="/inventory.html"><i class="fas fa-boxes"></i> INVENTORY</a></li>
+                <li class="link"><a href="pos.html"><i class="fas fa-shopping-cart"></i> Point of sale</a></li>
+                <li class="link"><a href="sales_history.html"><i class="fas fa-history"></i> SALES HISTORY</a></li>
+                <li class="link"><a href="products.html"><i class="fas fa-tags"></i> PRODUCTS</a></li>
+                <li class="link"><a href="inventory.html"><i class="fas fa-boxes"></i> INVENTORY</a></li>
             </ul>
         </div>
         <div class="main">
