[Bug #161204596 finishes] Improved colour contrast

--- a/add_sale_attendant.html
+++ b/add_sale_attendant.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
     <script src="script/index.js"></script>
     <title>Store Manager</title>
 </head>
@@ -17,7 +17,7 @@
 <body class="root">
     <header class="app-bar">
         <div>
-            <h1 class="title"><i class="fas fa-store logo"></i></h1>
+            <h1 class="title"><i class="fas fa-store logo"></i> STORE MANAGER</h1>
         </div>
     </header>
     <main class="body">
